# internal/handlers/register.go
@@ -1,6 +1,7 @@
 package handlers
 
 import (
+	"errors"
 	"fmt"
 	"github.com/aerosystems/auth-service/internal/models"
 	"github.com/aerosystems/auth-service/pkg/normalizers"
@@ -8,6 +9,7 @@ import (
 	"golang.org/x/crypto/bcrypt"
 	"gorm.io/gorm"
 	"net/http"
+	"net/rpc"
 )
 
 type RegistrationRequestBody struct {
@@ -20,6 +22,11 @@ type RPCMailPayload struct {
 	To      string
 	Subject string
 	Body    string
+}
+
+type RPCInspectPayload struct {
+	Domain   string
+	ClientIp string
 }
 
 // Register godoc
@@ -45,7 +52,7 @@ func (h *BaseHandler) Register(w http.ResponseWriter, r *http.Request) {
 	var requestPayload RegistrationRequestBody
 
 	if err := ReadRequest(w, r, &requestPayload); err != nil {
-		_ = WriteResponse(w, http.StatusUnprocessableEntity, NewErrorPayload(422001, "could not read request body", err))
+		_ = WriteResponse(w, http.StatusUnprocessableEntity, NewErrorPayload(422001, "Could not read request body", err))
 		return
 	}
 
@@ -67,22 +74,45 @@ func (h *BaseHandler) Register(w http.ResponseWriter, r *http.Request) {
 		return
 	}
 
+	// checking email in blacklist via RPC
+	if checkmailClientRPC, err := rpc.Dial("tcp", "checkmail-service:5001"); err == nil {
+		var result string
+		if err := checkmailClientRPC.Call(
+			"CheckmailServer.Inspect",
+			RPCInspectPayload{
+				Domain:   email,
+				ClientIp: r.RemoteAddr,
+			},
+			&result); err != nil {
+			_ = WriteResponse(w, http.StatusBadRequest, NewErrorPayload(400101, "Email address does not valid", err))
+			return
+		}
+
+		if result == "blacklist" {
+			err := fmt.Errorf("email address contains in blacklist")
+			_ = WriteResponse(w, http.StatusBadRequest, NewErrorPayload(400102, "Email address contains in Blacklist", err))
+			return
+		}
+	} else {
+		h.log.Error(err)
+	}
+
 	user, err := h.userRepo.FindByEmail(email)
-	if err != nil && err != gorm.ErrRecordNotFound {
-		_ = WriteResponse(w, http.StatusNotFound, NewErrorPayload(404007, "could not find User", err))
+	if err != nil && !errors.Is(err, gorm.ErrRecordNotFound) {
+		_ = WriteResponse(w, http.StatusNotFound, NewErrorPayload(404007, "Could not find User", err))
 		return
 	}
 
 	if user != nil {
 		if user.IsActive {
 			err := fmt.Errorf("user with claim Email %s already exists", email)
-			_ = WriteResponse(w, http.StatusConflict, NewErrorPayload(409011, "user already exists", err))
+			_ = WriteResponse(w, http.StatusConflict, NewErrorPayload(409011, "User already exists", err))
 			return
 		} else {
 			// updating password for inactive user
 			err := h.userRepo.ResetPassword(user, requestPayload.Password)
 			if err != nil {
-				_ = WriteResponse(w, http.StatusInternalServerError, NewErrorPayload(500005, "could not reset User password", err))
+				_ = WriteResponse(w, http.StatusInternalServerError, NewErrorPayload(500005, "Could not reset User password", err))
 				return
 			}
 
@@ -92,26 +122,31 @@ func (h *BaseHandler) Register(w http.ResponseWriter, r *http.Request) {
 				// generating confirmation code
 				_, err = h.codeRepo.NewCode(*user, "registration", "")
 				if err != nil {
-					_ = WriteResponse(w, http.StatusInternalServerError, NewErrorPayload(500008, "could not create new Code", err))
+					_ = WriteResponse(w, http.StatusInternalServerError, NewErrorPayload(500008, "Could not create new Code", err))
 					return
 				}
 			} else {
 				// extend expiration code and return previous active code
 				if err = h.codeRepo.ExtendExpiration(code); err != nil {
-					_ = WriteResponse(w, http.StatusInternalServerError, NewErrorPayload(500012, "could not extend expiration date Code", err))
+					_ = WriteResponse(w, http.StatusInternalServerError, NewErrorPayload(500012, "Could not extend expiration date Code", err))
 					return
 				}
 			}
 
 			// sending confirmation code via RPC
-			var result string
-			err = h.mailClientRPC.Call("MailServer.SendEmail", RPCMailPayload{
-				To:      user.Email,
-				Subject: "Confirm your email🗯",
-				Body:    fmt.Sprintf("Your confirmation code is %d", code.Code),
-			}, &result)
+			mailClientRPC, err := rpc.Dial("tcp", "mail-service:5001")
 			if err != nil {
-				_ = WriteResponse(w, http.StatusInternalServerError, NewErrorPayload(500008, "could not send email", err))
+				_ = WriteResponse(w, http.StatusInternalServerError, NewErrorPayload(500007, "Could not send email", err))
+				return
+			}
+			var result string
+			if err := mailClientRPC.Call("MailServer.SendEmail",
+				RPCMailPayload{
+					To:      user.Email,
+					Subject: "Confirm your email🗯",
+					Body:    fmt.Sprintf("Your confirmation code is %d", code.Code),
+				}, &result); err != nil {
+				_ = WriteResponse(w, http.StatusInternalServerError, NewErrorPayload(500008, "Could not send email", err))
 				return
 			}
 
@@ -123,7 +158,7 @@ func (h *BaseHandler) Register(w http.ResponseWriter, r *http.Request) {
 	// hashing password
 	hashedPassword, err := bcrypt.GenerateFromPassword([]byte(requestPayload.Password), 12)
 	if err != nil {
-		_ = WriteResponse(w, http.StatusInternalServerError, NewErrorPayload(500009, "could not create Password", err))
+		_ = WriteResponse(w, http.StatusInternalServerError, NewErrorPayload(500009, "Could not create Password", err))
 		return
 	}
 
@@ -136,26 +171,31 @@ func (h *BaseHandler) Register(w http.ResponseWriter, r *http.Request) {
 
 	err = h.userRepo.Create(&newUser)
 	if err != nil {
-		_ = WriteResponse(w, http.StatusInternalServerError, NewErrorPayload(500010, "could not create new User", err))
+		_ = WriteResponse(w, http.StatusInternalServerError, NewErrorPayload(500010, "Could not create new User", err))
 		return
 	}
 
 	// generating confirmation code
 	code, err := h.codeRepo.NewCode(newUser, "registration", "")
 	if err != nil {
-		_ = WriteResponse(w, http.StatusInternalServerError, NewErrorPayload(500008, "could not gen new Code", err))
+		_ = WriteResponse(w, http.StatusInternalServerError, NewErrorPayload(500008, "Could not gen new Code", err))
 		return
 	}
 
 	// sending confirmation code via RPC
+	mailClientRPC, err := rpc.Dial("tcp", "mail-service:5001")
+	if err != nil {
+		_ = WriteResponse(w, http.StatusInternalServerError, NewErrorPayload(500007, "Could not send email", err))
+		return
+	}
 	var result string
-	err = h.mailClientRPC.Call("MailServer.SendEmail", RPCMailPayload{
+	err = mailClientRPC.Call("MailServer.SendEmail", RPCMailPayload{
 		To:      newUser.Email,
 		Subject: "Confirm your email🗯",
 		Body:    fmt.Sprintf("Your confirmation code is %d", code.Code),
 	}, &result)
 	if err != nil {
-		_ = WriteResponse(w, http.StatusInternalServerError, NewErrorPayload(500008, "could not send email", err))
+		_ = WriteResponse(w, http.StatusInternalServerError, NewErrorPayload(500008, "Could not send email", err))
 		return
 	}
 
